<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation,ExtraTranslation">
    <string name="app_name">UIKitSamples</string>

    <!-- LOGIN -->
    <string name="text_title_login_activity">Sendbird UIKit sample</string>
    <string name="text_title_basic_sample">Basic Usages</string>
    <string name="text_title_ai_chat_bot_sample">Talk to an AI Chatbot</string>
    <string name="text_title_customization_sample">Customizations</string>
    <string name="text_title_notification_sample">Business Messaging sample</string>
    <string name="text_title_uikit_sample_app">UIKit sample app</string>

    <string name="text_version_info">UI Kit v%1$s &#160;&#160;&#160;&#160; SDK v%2$s</string>
    <string name="text_hint_application_id">App ID</string>
    <string name="text_hint_user_id">User ID</string>
    <string name="text_hint_nickname">User nickname</string>
    <string name="text_hint_bot_id">Bot ID</string>
    <string name="text_sign_in">SIGN IN</string>
    <string name="text_sign_out">SIGN OUT</string>
    <string name="text_sign_out_lower">Sign out</string>
    <string name="text_select_sample">Select sample apps</string>

    <string name="text_settings_header_title">My settings</string>
    <string name="text_settings_header_edit_button">Edit</string>
    <string name="text_settings_user_id_badge">User ID</string>
    <string name="text_settings_theme_title">Dark theme</string>
    <string name="text_settings_disturb_title">Do not disturb</string>
    <string name="text_settings_home_title">Exit to home</string>
    <string name="text_settings_change_user_nickname">Change nickname</string>
    <string name="text_settings_change_user_profile_image">Change profile image</string>

    <string name="text_tab_channels">Channels</string>
    <string name="text_tab_settings">Settings</string>
    <string name="text_tab_badge_max_count">99+</string>
    <string name="text_tab_notifications">Notifications</string>

    <string name="text_use_feed_channel_only">Use feed channel only</string>
    <string name="text_home">Home</string>
    <string name="text_save">Save</string>
    <string name="text_group_channel">Group channel</string>
    <string name="text_open_channel">Open channel</string>
    <string name="text_ai_chatbot">Talk to an AI Chatbot</string>
    <string name="text_custom_sample">Custom sample</string>
    <string name="text_group_channel_description">1 on 1, Group chat with members</string>
    <string name="text_open_channel_description">Live streams, Open community chat</string>
    <string name="text_ai_chatbot_description">1 on 1, Group chat with bots</string>
    <string name="text_create_community">Create community</string>
    <string name="text_live_streams">Live streams</string>
    <string name="text_community">Community</string>
    <string name="text_live_streaming_description">Preset channels developed by UIKit</string>
    <string name="text_header_create_button">Create</string>
    <string name="text_input_channel_name_hint">Enter channel name</string>
    <string name="text_live">LIVE</string>
    <string name="text_participants">%s participants</string>
    <string name="text_error_update_user_information">Couldn\&#39;t update user information.</string>
    <string name="text_error_update_do_not_disturb">Couldn\&#39;t update disturb setting.</string>
    <string name="sb_text_need_to_allow_permission_notification">%s\nneeds permission to receive push notification. Go to Settings to allow access</string>
    <string name="sb_text_dialog_not_supported_title">Enable this feature</string>
    <string name="text_not_supported">This feature is disabled by default. To enable it, follow instructions in README.md in the sample repository.</string>
    <string name="sb_text_go_to_readme">Go to README</string>

    <!-- Notifications -->
    <string name="text_business_messaging">Business Messaging</string>
    <string name="text_notification_chat_and_feed_type">Chat and Feed channels</string>
    <string name="text_notification_feed_type_only">Feed channel only</string>


    <!-- Customizations -->
    <!--  Global Customization  -->
    <string name="text_list_title_global">Global Customization</string>
    <string name="text_title_fragment_providers_sample">Fragment Providers</string>
    <string name="text_desc_fragment_providers_sample">Using Builder and FragmentProviders, implement channel fragment that does not use the header component.</string>
    <string name="text_title_module_providers_sample">Module Providers</string>
    <string name="text_desc_module_providers_sample">Using ModuleProviders, implement channel module that has custom header component.</string>
    <string name="text_title_viewmodel_providers_sample">ViewModel Providers</string>
    <string name="text_desc_viewmodel_providers_sample">Using ViewModelProviders, create a channel to sends text messages with prefixes.</string>
    <string name="text_title_adapter_providers_sample">Adapter Providers</string>
    <string name="text_desc_adapter_providers_sample">Using AdapterProviders, create a message list that does not use message grouping.</string>

    <!--  Channel Customization  -->
    <string name="text_list_title_channel">Channel Customization</string>
    <string name="text_title_message_ui_sample">Message UI</string>
    <string name="text_desc_message_ui_sample">Customize the existing message UI.</string>
    <string name="text_title_new_message_type_sample">New Message Type</string>
    <string name="text_desc_new_message_type_sample">Declare a new custom message type and implement the sending and rendering of it.</string>
    <string name="text_title_message_click_sample">Message Click</string>
    <string name="text_desc_message_click_sample">Implement a toast notification on message click.</string>
    <string name="text_title_message_menu_sample">Message Menu</string>
    <string name="text_desc_message_menu_sample">Implement adding and removing menu items in the long-click menu for messages.</string>
    <string name="text_title_message_data_sample">Message Data</string>
    <string name="text_desc_message_data_sample">Customize message data using message parameters before sending.</string>
    <string name="text_title_message_filtering_sample">Message Filtering</string>
    <string name="text_desc_message_filtering_sample">Implement message filtering using the filter options provided in MessageListParams.</string>
    <string name="text_title_channel_layout_sample">Channel Layout</string>
    <string name="text_desc_channel_layout_sample">Add additional views to the existing channel view from within a module.</string>
    <string name="text_title_input_menu_sample">Input Menu</string>
    <string name="text_desc_input_menu_sample">Reconfigure the input menu.</string>
    <string name="text_title_channel_header_sample">Channel Header</string>
    <string name="text_desc_channel_header_sample">Implement a new header by inheriting the ChannelHeaderComponent.</string>

    <!--  Channel List Customization  -->
    <string name="text_list_title_channel_list">Channel List Customization</string>
    <string name="text_title_channel_item_ui_sample">Channel Item UI</string>
    <string name="text_desc_channel_item_ui_sample">Customize the channel item UI.</string>
    <string name="text_title_new_channel_item_type_sample">New Channel Item Type</string>
    <string name="text_desc_new_channel_item_type_sample">Display a new type of channel item.</string>
    <string name="text_title_channel_item_filtering">Channel Item Filtering</string>
    <string name="text_desc_channel_item_filtering">Filter channels using GroupChannelListQueryParams.</string>
    <string name="text_channel_typing_indicator_single">%s is typing&#8230;</string>
    <string name="text_channel_typing_indicator_double">%s and %s are typing&#8230;</string>
    <string name="text_channel_typing_indicator_multiple">Several people are typing&#8230;</string>

    <!--  Channel Settings Customization  -->
    <string name="text_list_title_channel_settings">Channel Settings Customization</string>
    <string name="text_title_append_new_channel_settings_menu_sample">Append New Channel Settings Menu</string>
    <string name="text_desc_append_new_channel_settings_menu_sample">Append new channel Settings menus.</string>
    <string name="text_title_hide_channel_settings_menu_sample">Hide Default Channel Settings Menu</string>
    <string name="text_desc_hide_channel_settings_menu_sample">Hide default channel Settings menus.</string>
    <string name="text_title_custom_channel_settings_menu_sample">Change The Whole Channel Settings Menu</string>
    <string name="text_desc_custom_channel_settings_menu_sample">Change the whole channel Settings menus.</string>

    <!--  User List Customization  -->
    <string name="text_list_title_user_list">User List Customization</string>
    <string name="text_title_user_item_ui_sample">User Item UI</string>
    <string name="text_desc_user_item_ui_sample">Customize the user item view for the user selection screen.</string>
    <string name="text_title_user_item_select_sample">User Item Select</string>
    <string name="text_desc_user_item_select_sample">Limit the number of users that can be selected on the user selection screen.</string>
    <string name="text_title_user_item_filtering">User Item Filtering</string>
    <string name="text_desc_user_item_filtering">Implement filtering for users based on a specific criteria for display.</string>
    <string name="text_title_user_item_custom_datasource">User Item Custom Data Source</string>
    <string name="text_desc_user_item_custom_datasource">Retrieve user data from external sources.</string>
    <string name="text_title_custom_member_context_menu">Customize member context menu</string>
    <string name="text_desc_custom_member_context_menu">Provide a way to make custom member context menus</string>
    <string name="text_moderation_custom_group_channel_sample">Create random group channel, test record feature.</string>
    <string name="text_moderation_custom_open_channel_sample">Create random open channel, test record feature.</string>

    <!-- Moderation -->
    <string name="text_report">Report</string>
    <string name="text_title_moderation">Moderation Feature Customization</string>
    <string name="text_title_moderation_group_channel">Moderation feature for Group Channel</string>
    <string name="text_title_moderation_open_channel">Moderation feature for Open Channel</string>
    <string name="text_report_suspicious">Suspicious</string>
    <string name="text_report_harassing">Harassing</string>
    <string name="text_report_spam">Spam</string>
    <string name="text_report_inappropriate">Inappropriate</string>
    <string name="text_report_error">Couldn\&#39;t report message.</string>

    <!-- AI ChatBot -->
    <string name="text_title_ai_chatbot_features">AI ChatBot Feature</string>
    <string name="text_webview_chatbot_widget">WebView ChatBot Widget</string>
    <string name="text_webview_custom_chatbot_widget_sample">Embed an AI chatbot in WebView</string>

    <string name="text_list_item_nickname_format">#%d. %s</string>

    <string name="text_resend">Resend</string>
    <string name="text_delete">Delete</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_custom_header">Custom Header</string>
    <string name="text_menu_thumbs_up">Thumbs Up</string>
    <string name="text_menu_thumbs_down">Thumbs Down</string>
    <string name="text_choose_report_category_dialog">Choose the report category</string>

    <string-array name="sb_regions">
        <item>PRODUCTION</item>
        <item>PREPROD</item>
        <item>NO1</item>
        <item>NO2</item>
        <item>NO3</item>
        <item>NO4</item>
        <item>NO5</item>
    </string-array>
</resources>
