<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/sb_size_24">

        <TextView
            android:id="@+id/mainTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sb_size_24"
            android:layout_marginEnd="@dimen/sb_size_24"
            android:layout_marginBottom="@dimen/sb_size_24"
            android:textSize="@dimen/sb_text_size_24"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:text="@string/text_title_basic_sample"/>

        <com.sendbird.uikit.samples.common.widgets.EntryButton
            android:id="@+id/groupChannelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/text_group_channel"
            android:description="@string/text_group_channel_description"
            android:layout_marginStart="@dimen/sb_size_24"
            android:layout_marginEnd="@dimen/sb_size_24"
            android:layout_marginBottom="@dimen/sb_size_16"/>

        <com.sendbird.uikit.samples.common.widgets.EntryButton
            android:id="@+id/openChannelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/text_open_channel"
            android:description="@string/text_open_channel_description"
            android:layout_marginStart="@dimen/sb_size_24"
            android:layout_marginEnd="@dimen/sb_size_24"
            android:layout_marginBottom="@dimen/sb_size_32"/>

        <Button
            android:id="@+id/btSignOut"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sb_size_48"
            android:layout_marginStart="@dimen/sb_size_24"
            android:layout_marginEnd="@dimen/sb_size_24"
            android:textSize="@dimen/sb_text_size_14"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:textColor="@color/onlight_text_high_emphasis"
            android:lineSpacingExtra="@dimen/sb_size_2"
            android:text="@string/text_sign_out" />
    </LinearLayout>
</ScrollView>
