<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/background_100"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@id/versionInfo"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/sb_size_32">

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/sb_size_24"
            android:layout_marginRight="@dimen/sb_size_24"
            android:layout_marginBottom="@dimen/sb_size_24"
            android:textSize="@dimen/sb_text_size_24"
            android:textStyle="bold"
            android:textColor="@color/onlight_01"
            android:fontFamily="sans-serif"
            android:text="@string/text_title_login_activity"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/basicSampleButton"/>

        <com.sendbird.uikit.samples.common.widgets.EntryButton
            android:id="@+id/basicSampleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/text_title_basic_sample"
            android:layout_marginStart="@dimen/sb_size_24"
            android:layout_marginEnd="@dimen/sb_size_24"
            android:layout_marginBottom="@dimen/sb_size_16"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/customizationSampleButton"
            />

        <com.sendbird.uikit.samples.common.widgets.EntryButton
            android:id="@+id/customizationSampleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/text_title_customization_sample"
            android:layout_marginStart="@dimen/sb_size_24"
            android:layout_marginEnd="@dimen/sb_size_24"
            android:layout_marginBottom="@dimen/sb_size_16"
            app:layout_constraintTop_toBottomOf="@id/basicSampleButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/aiChatBotSampleButton"
            />

        <com.sendbird.uikit.samples.common.widgets.EntryButton
            android:id="@+id/aiChatBotSampleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/text_title_ai_chat_bot_sample"
            android:layout_marginStart="@dimen/sb_size_24"
            android:layout_marginEnd="@dimen/sb_size_24"
            android:layout_marginBottom="@dimen/sb_size_16"
            app:layout_constraintTop_toBottomOf="@id/customizationSampleButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/notificationSampleButton"
            />

        <com.sendbird.uikit.samples.common.widgets.EntryButton
            android:id="@+id/notificationSampleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/text_title_notification_sample"
            android:layout_marginStart="@dimen/sb_size_24"
            android:layout_marginEnd="@dimen/sb_size_24"
            app:layout_constraintTop_toBottomOf="@id/aiChatBotSampleButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/versionInfo"
            />

        <TextView
            android:id="@+id/versionInfo"
            android:layout_height="@dimen/sb_size_0"
            android:layout_width="match_parent"
            android:gravity="center|bottom"
            android:textSize="@dimen/sb_text_size_12"
            android:paddingTop="@dimen/sb_size_24"
            android:layout_marginBottom="@dimen/sb_size_16"
            android:textColor="@color/onlight_02"
            app:layout_constraintHeight_min="@dimen/sb_size_36"
            app:layout_constraintTop_toBottomOf="@id/notificationSampleButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/logoBottom"
            />

        <ImageView
            android:id="@+id/logoBottom"
            android:layout_width="@dimen/sb_size_93"
            android:layout_height="@dimen/sb_size_16"
            android:layout_marginBottom="@dimen/sb_size_20"
            android:background="@drawable/logo_sendbird_full"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
