<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/background"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/headerComponent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <ImageView
            android:id="@+id/ivProfileView"
            android:layout_width="@dimen/sb_size_64"
            android:layout_height="@dimen/sb_size_64"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/sb_size_24"
            android:layout_marginBottom="@dimen/sb_size_4"/>

        <TextView
            android:id="@+id/tvNickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/sb_size_4"
            android:layout_marginBottom="@dimen/sb_size_24"
            android:ellipsize="middle"
            android:singleLine="true"
            android:paddingLeft="@dimen/sb_size_16"
            android:paddingRight="@dimen/sb_size_16"
            android:textAppearance="@style/SendbirdH1OnLight01" />

        <View
            android:id="@+id/idDivider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sb_size_1"
            android:layout_marginLeft="@dimen/sb_size_16"
            android:layout_marginRight="@dimen/sb_size_16"
            />

        <TextView
            android:id="@+id/tvUserIdBadge"
            android:text="@string/text_settings_user_id_badge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/sb_size_16"
            android:layout_marginRight="@dimen/sb_size_16"
            android:layout_marginTop="@dimen/sb_size_16"
            android:layout_marginBottom="@dimen/sb_size_2"
            android:textAppearance="@style/SendbirdBody3OnLight02"
            />

        <TextView
            android:id="@+id/tvUserId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_marginLeft="@dimen/sb_size_16"
            android:layout_marginRight="@dimen/sb_size_16"
            android:layout_marginTop="@dimen/sb_size_2"
            android:layout_marginBottom="@dimen/sb_size_16"
            android:textAppearance="@style/SendbirdBody1OnLight01"
            />

        <View
            android:id="@+id/profileDivider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sb_size_1"
            android:layout_marginLeft="@dimen/sb_size_16"
            android:layout_marginRight="@dimen/sb_size_16"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/itemDarkTheme"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sb_size_56"
            android:clickable="true"
            android:focusable="true"
            android:paddingLeft="@dimen/sb_size_16"
            android:paddingRight="@dimen/sb_size_16">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/scDarkThemeSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvDarkThemeName"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/ivDarkThemeIcon"
                android:layout_width="@dimen/sb_size_28"
                android:layout_height="@dimen/sb_size_28"
                android:src="@drawable/icon_theme"
                android:background="@drawable/shape_oval"
                android:padding="@dimen/sb_size_5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tvDarkThemeName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDarkThemeName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/sb_size_16"
                android:layout_marginRight="@dimen/sb_size_16"
                android:gravity="center_vertical"
                android:text="@string/text_settings_theme_title"
                android:textAppearance="@style/SendbirdSubtitle2OnLight01"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/scDarkThemeSwitch"
                app:layout_constraintStart_toEndOf="@id/ivDarkThemeIcon"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/darkThemeDivider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sb_size_1"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/itemDisturb"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sb_size_56"
            android:clickable="true"
            android:focusable="true"
            android:paddingLeft="@dimen/sb_size_16"
            android:paddingRight="@dimen/sb_size_16">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/scDisturbSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvDisturbName"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/ivDisturbIcon"
                android:layout_width="@dimen/sb_size_28"
                android:layout_height="@dimen/sb_size_28"
                android:src="@drawable/icon_notifications_filled"
                android:background="@drawable/shape_oval"
                android:padding="@dimen/sb_size_5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tvDisturbName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDisturbName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/sb_size_16"
                android:layout_marginRight="@dimen/sb_size_16"
                android:gravity="center_vertical"
                android:text="@string/text_settings_disturb_title"
                android:textAppearance="@style/SendbirdSubtitle2OnLight01"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/scDisturbSwitch"
                app:layout_constraintStart_toEndOf="@id/ivDisturbIcon"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/disturbDivider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sb_size_1"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/itemHome"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sb_size_56"
            android:clickable="true"
            android:focusable="true"
            android:paddingLeft="@dimen/sb_size_16"
            android:paddingRight="@dimen/sb_size_16">

            <ImageView
                android:id="@+id/ivHomeIcon"
                android:layout_width="@dimen/sb_size_28"
                android:layout_height="@dimen/sb_size_28"
                android:src="@drawable/icon_leave"
                android:background="@drawable/shape_oval"
                android:padding="@dimen/sb_size_5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tvHomeName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvHomeName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/sb_size_16"
                android:layout_marginRight="@dimen/sb_size_16"
                android:gravity="center_vertical"
                android:text="@string/text_settings_home_title"
                android:textAppearance="@style/SendbirdSubtitle2OnLight01"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivHomeIcon"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/signOutDivider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sb_size_1"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</ScrollView>
